# SGMemory

./: .gitignore  Build.bat  CMakeLists.txt  MemSnap.cpp  MemoryManager.cpp  MemoryManager.h  README.md  SGContainers.h  SGDefines.h  SGMemory.cpp  SGMemory.sln  SGMemory.vcxproj  SGMemory.vcxproj.filters  SGMemoryManager.cpp  SGMemoryManager.h  SGObjectManager.cpp  SGObjectManager.h
SGMemory/: CMakeLists.txt  SGDefines.h
SGMemory/Allocator/: SGMemoryAllocator.cpp  SGMemoryAllocator.h  SGMemoryDefines.h  SGMemoryManager.cpp  SGMemoryManager.h
SGMemory/Container/: SGContainers.h  SGContrainers.cpp
SGMemory/Object/: SGObject.cpp  SGObject.h  SGObjectManager.cpp  SGObjectManager.h
SGMemoryTest/: CMakeLists.txt  SGMemory.cpp  SGMemoryTest.cpp
